src/objects/Apttus_Billing__ForecastedLineItemOptions__c.object
<CustomObject>
    <description>Options for each Line Item of a Proposal to be forecasted by Billing.</description>
    <fields>
        <fullName>Apttus_Billing__AverageContractTerms__c</fullName>
        <description>For an evergreen Line Item this is the number of Billing Schedules to forecast.</description>
        <inlineHelpText>For an evergreen Line Item this is the number of Billing Schedules to forecast.</inlineHelpText>
        <label>Average Life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ConfigurationId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the corresponding Product Configuration.</description>
        <inlineHelpText>Id of the corresponding Product Configuration.</inlineHelpText>
        <label>Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Forecasted Line Item Options</relationshipLabel>
        <relationshipName>ForecastedLineItemOptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__EstimatedUsageQuantity__c</fullName>
        <description>The Quantity to apply when calculating usage for the various Billing Periods.</description>
        <inlineHelpText>The Quantity to apply when calculating usage for the various Billing Periods.</inlineHelpText>
        <label>Estimated Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ForecastedBillingOptionsId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the corresponding Forecasted Billing Options object.</description>
        <inlineHelpText>Id of the corresponding Forecasted Billing Options object.</inlineHelpText>
        <label>Forecasted Billing Options</label>
        <referenceTo>Apttus_Billing__ForecastedBillingOptions__c</referenceTo>
        <relationshipLabel>Forecasted Line Item Options</relationshipLabel>
        <relationshipName>ForecastedLineItemOptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__LineItem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the corresponding Line Item.</description>
        <inlineHelpText>Id of the corresponding Line Item.</inlineHelpText>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Forecasted Line Item Options</relationshipLabel>
        <relationshipName>ForecastedLineItemOptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProposalId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the corresponding Quote/Proposal.</description>
        <inlineHelpText>Id of the corresponding Quote/Proposal.</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Forecasted Line Item Options</relationshipLabel>
        <relationshipName>ForecastedLineItemOptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__UpliftAfterNumBillingPeriods__c</fullName>
        <description>The number of Billing Periods that must to elapse before uplifting (increasing) the forecasted rate.</description>
        <inlineHelpText>The number of Billing Periods that must to elapse before uplifting (increasing) the forecasted rate.</inlineHelpText>
        <label>Uplift After</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__UpliftPercentage__c</fullName>
        <description>The percentage to apply when uplifting (increasing) the amount per billing period of an Evergreen Asset.</description>
        <inlineHelpText>The percentage to apply when uplifting (increasing) the amount per billing period of an Evergreen Asset. Leave this blank if there is no uplift.</inlineHelpText>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Forecasted Line Item Options</label>
    <nameField>
        <displayFormat>FLIO-{00000000}</displayFormat>
        <label>Options Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasted Line Item Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>